# diarization

./: .gitignore  AssistantMerger.h  AudioRecordCommand.h  CMakeLists.txt  DiarizationCli.h  DiarizationStatus.h  EcapaOnnxModel.h  LabelSmoother.cpp  README.md  ReadMe.md  SpeakerCluster.h  WeSpeakerEcapaModel.cpp  ci_run.sh
adapters/: AudioRecordCommand.h  WhisperAdapter.h
bench/: diarization_bench.cpp
docs/: KNOWN_LIMITATIONS.md  ROADMAP.md  audio_sanity.md  benchmark_report.md  diarize.md  model_validation.md  processing_flow.md  proposal.md  voxceleb_evaluation.md  voxceleb_results.md
docs/TODO/: TODO-beyond_cosine.md  TODO-factory_selection.md
include/diarization/: AudioChunk.h  DiarizationEngine.h  ISpeakerEmbeddingModel.h  LabelSmoother.h  ModelMetadata.h  SpeakerClusterManager.h  SpeakerVerifier.h  TranscriptFormatter.h
integration/: AssistantMerger.h  DiarizationCli.h  DiarizationStatus.h
models/: EcapaOnnxModel.cpp  EcapaOnnxModel.h  FBankFrontEnd.h  SpeakerModelFactory.cpp  SpeakerModelFactory.h  SpeakerVerifier.cpp  SpeechBrainEcapaModel.cpp  SpeechBrainEcapaModel.h  WeSpeakerEcapaModel.cpp  WeSpeakerEcapaModel.h
src/: DiarizationEngine.cpp  LabelSmoother.cpp  SpeakerClusterManager.cpp  TranscriptFormatter.cpp
tests/: acceptance_test.cpp  compare_embeddings.py  gen_test_wav.py  gen_verification_wavs.py  generate_voxceleb_trials  integration_tests.cpp  tests.cpp  tests.md  verification_test.cpp  verification_trials.cpp  wav_reader.h
tools/: check_trials.cpp  embed_reference.py  embed_wav.cpp
